--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,56 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Nunito', 'Arial';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #9c27b0;
+  color:whitesmoke;
+  font-size: 35px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.question-info{
+  font-size:25px;
+}
+
+.answer-button{
+  font-size:20px;
+}
+
+.history{
+  font-size:20px;
+  margin-bottom:100px;
+  padding-left:40px;
+}
+
+select{
+  border: 1px solid #ccc;
+  width: 120px;
+  border-radius: 3px;
+  overflow: hidden;
+  background:rgb(8, 133, 216) no-repeat 90% 50%;
+  height:50px;
+  color:white;
+  font-weight:bold;
+  font-size:40px;
+  height:200px;
+}
+
+.select-style select {
+  padding: 5px 8px;
+  width: 130%;
+  border: none;
+  box-shadow: none;
+  background: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+}
+
+.select-style select:focus {
+  outline: none;
 }
